fix buggs on mobile

--- a/src/components/Box/box.css
+++ b/src/components/Box/box.css
@@ -41,6 +41,7 @@
       justify-content: center;
       align-items: center;
       position: relative;
+      text-align: center;
     }
 
         .Box {
